--- a/index.html
+++ b/index.html
@@ -121,9 +121,8 @@
 				<div class="col-md-8 col-md-offset-2 animate-box">
 					<div class="col-md-12 text-center section-heading svg-sm colored">
 						<img src="images/flaticon/svg/005-two.svg" class="svg" alt="Intan&Faruq">
-						<h2>You're Invited</h2>
-						<p><strong>on Sept 4, 2020 &mdash; Jl. Cendrawasih AA 31 Wisma Pangeranan Asri, Bangkalan</strong></p>
-						<p><strong id="meetBox">Join Zoom Meeting &mdash;Meeting ID:962 4499 8336 Pass:frqintnwed </strong></p>
+						<h2 id=invitedBox>You're Invited</h2>
+						<p><strong id="meetBox">on Sept 4, 2020 (08:00 a.m-10:30 a.m)&mdash; Zoom meeting ID will appear 1 days before the wedding, please check the countdown.</strong></p>
 					</div>
 				</div>
 			</div>
